--- a/WebDev/blog-project/frontend/src/BlogForm.module.css
+++ b/WebDev/blog-project/frontend/src/BlogForm.module.css
@@ -30,7 +30,8 @@
     right:2rem;
     width:fit-content;
     height: 4rem;
-    border:1px solid hsl(0, 0%, 80%);
+    /* border:1px solid hsl(0, 0%, 80%); */
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     border-radius: 6px;
     overflow: hidden;
     background-color: rgb(255, 225, 225);
@@ -38,17 +39,6 @@
     z-index: 10;
 }
 .error-message {
-    /* position: absolute;
-    right:0;
-    top:0;
-    background-color: rgb(255, 225, 225);
-    color:rgb(255, 116, 116);
-    border-radius: 4px;
-    font-size: 12px;
-    padding: 3px; */
-    /* width:100%; */
-    /* height: 100%; */
-    /* padding:1.5rem; */
     display: flex;
     text-align: center;
     align-self: center;
@@ -62,7 +52,7 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 2px;
+    height: 4px;
     background-color: red;
     /* transform: translateX(); */
 }
