--- a/WebDev/blog-project/frontend/src/BlogItem.module.css
+++ b/WebDev/blog-project/frontend/src/BlogItem.module.css
@@ -1,14 +1,57 @@
+.confirmed {
+    position: fixed;
+    top:4rem;
+    right:2rem;
+    width:fit-content;
+    height: 4rem;
+    /* border:1px solid hsl(0, 0%, 80%); */
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    border-radius: 6px;
+    overflow: hidden;
+    /* background-color: rgb(255, 225, 225); */
+    background-color:#defade;
+    z-index: 10;
+}
+.confirm-message {
+    display: flex;
+    text-align: center;
+    align-self: center;
+    margin: 1.5rem;
+    font-size: 16px;
+    /* border:1px solid blue; */
+
+}
+.countdown {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 4px;
+    background-color: rgb(162, 255, 175);
+    /* transform: translateX(); */
+}
+.animate {
+    animation: slideIn 2s linear forwards;
+}
+@keyframes slideIn {
+    from {
+        transform: translateX(0%);
+    }
+    to {
+        transform: translateX(-100%);
+    }
+}
 .container-link {
-    display:block;
-    margin-bottom: 1.5rem;
-    height: fit-content;
+    /* display:block; */
+    /* height: fit-content; */
     color: black;
     text-decoration: none;
+    /* overflow: hidden; */
     /* border:1px solid red; */
 }
 
 .container {
     margin:auto;
+    margin-bottom: 1.5rem;
     height:295px;
     max-width: 900px;
     overflow: hidden;
@@ -21,6 +64,13 @@
     height:350px;
     gap:0;
     /* border:1px solid blue; */
+}
+.image-container {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    box-sizing: border-box;
+    /* border:2px solid orange; */
 }
 .image-container img {
     display:block;
@@ -36,8 +86,8 @@
 .preview-box {
     display:grid;
     padding:0px 30px;
-    grid-template-rows: max-content 2rem 7rem max-content;
-    gap:1rem .5rem ;
+    grid-template-rows: max-content 2.5rem 7rem max-content;
+    gap:.75rem 1rem;
     width:100%;
     box-sizing: border-box;
     /* border:1px solid green; */
@@ -52,6 +102,7 @@
     font-size: 12px;
     align-items: center;
     box-sizing: border-box;
+    position: relative;
     /* border:1px solid green; */
 }
 .top-grid img {
@@ -62,6 +113,65 @@
     align-self: center;
     /* border:3px solid orange; */
 }
+.dropdown {
+    width:fit-content;
+    height: fit-content;
+    position: absolute;
+    right:0;
+    /* transform: translate(-30px); */
+    /* border:3px solid red; */
+    text-align: right;
+}
+.more {
+    font-size: 20px;
+    z-index: 50;
+    cursor:pointer;
+    width:fit-content;
+    display:flex;
+    text-align: right;
+    justify-self: right;
+    border: none;
+    background-color: white;
+    /* position: absolute; */
+    /* border:1px solid blue; */
+}
+.more:focus ~ .dropdown-content {
+    display: flex;
+}
+.dropdown-content {
+    position: relative;
+    display:none;
+    flex-direction: column;
+    /* border:1px solid greenyellow; */
+    border-radius: 2px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+.dropdown-content:hover {
+    display:flex
+}
+.dropdown-content button {
+    width: 100px;
+    height: fit-content;
+    padding: 10px;
+    border:none;
+    background-color: white;
+    cursor:pointer
+}
+.dropdown-content:first-child {
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+}
+.dropdown-content:last-child {
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+}
+.dropdown-content button:hover {
+    background-color: aliceblue;
+}
+/* .more:hover ~ .dropdown-content{
+    display:block;
+} */
 .top {
     display:flex;
     flex-direction: column;
@@ -72,8 +182,14 @@
     /* border:1px solid green; */
     font-size: 24px;
     font-weight: 500;
+    line-height: 1.5rem;
     overflow: hidden;
+    cursor:pointer;
+    transition: 0.3s ease;
     /* margin-top: 1rem; */
+}
+.title:hover {
+    opacity: 0.5;
 }
 .content {
     letter-spacing: 1px;
@@ -86,9 +202,11 @@
     /* border:1px solid red; */
     display: -webkit-box;
     -webkit-line-clamp: 5; /* number of lines */
-    /* -webkit-box-orient: vertical; */
-    /* overflow: hidden; */
     text-overflow: ellipsis;
+    transition: 0.3s ease;
+}
+.content:hover {
+    opacity: 0.5;
 }
 .bottom {
     /* position: absolute; */
