--- a/WebDev/blog-project/frontend/src/BlogItem.module.css
+++ b/WebDev/blog-project/frontend/src/BlogItem.module.css
@@ -1,3 +1,112 @@
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.25);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+}
+
+.popup-box {
+    background: white;
+    padding: 2rem;
+    border-radius: 12px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    max-width: 400px;
+    width: 90%;
+    text-align: center;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+.icon-container {
+    position: relative;
+    width: 64px;
+    height: 64px;
+    margin-top: -4rem;
+    margin-bottom: 1.5rem;
+    justify-self: center;
+    /* align-content: center; */
+    /* text-align: center;
+    width:fit-content;
+    height: fit-content; */
+    background-color: rgb(255, 225, 225);
+    /* border:1px solid black; */
+    border-radius: 50%;
+    color:red;
+}
+.icon {
+    position: absolute;
+    top:57.5%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    /* border: 1px solid green; */
+    padding:0;
+    font-size: 32px;
+    text-align: center !important;
+    vertical-align: middle;
+    font-size: 32px;
+}
+.popup-box h3 {
+    margin-bottom: 1rem;
+}
+.text {
+    margin-bottom: 1.5rem;
+}
+
+.popup-buttons {
+    display: flex;
+    flex-direction: row;
+    gap:12px;
+    justify-content: center;
+    /* justify-content: space-around; */
+    /* margin-top: 1.5rem; */
+}
+
+.cancel-button {
+    background-color: #ddd;
+    border: none;
+    padding: 1rem 2rem;
+    border-radius: 8px;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+
+.confirm-delete-button {
+    background-color: #e74c3c;
+    color: white;
+    border: none;
+    padding: 1rem 2rem;
+    border-radius: 8px;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+.confirm-edit-button {
+    background-color: rgb(255, 177, 75);;
+    color: white;
+    border: none;
+    padding: 1rem 2rem;
+    border-radius: 8px;
+    cursor: pointer;
+}
+.edit-popup-box {
+    /* display:block; */
+    /* flex-direction: column; */
+    background:white;
+    padding:2rem;
+    width: 90vw;
+    /* justify-content: center; */
+    margin:auto;
+    height: 85vh;
+    /* border:5px solid red; */
+    overflow-y:scroll;
+    border-radius: 8px;
+}
+.edit-container {
+    background-color: blue;
+}
 .confirmed {
     position: fixed;
     top:4rem;
@@ -90,6 +199,7 @@
     gap:.75rem 1rem;
     width:100%;
     box-sizing: border-box;
+    /* overflow: hidden; */
     /* border:1px solid green; */
 }
 .top-grid {
@@ -135,21 +245,21 @@
     /* position: absolute; */
     /* border:1px solid blue; */
 }
-.more:focus ~ .dropdown-content {
+/* .more:focus ~ .dropdown-content {
     display: flex;
-}
+} */
 .dropdown-content {
     position: relative;
-    display:none;
+    display:flex;
     flex-direction: column;
     /* border:1px solid greenyellow; */
     border-radius: 2px;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
-.dropdown-content:hover {
+/* .dropdown-content:hover {
     display:flex
-}
+} */
 .dropdown-content button {
     width: 100px;
     height: fit-content;
@@ -189,12 +299,14 @@
     /* margin-top: 1rem; */
 }
 .title:hover {
-    opacity: 0.5;
+    color: hsl(0, 0%, 60%);
 }
 .content {
     letter-spacing: 1px;
     /* word-spacing: 1em; */
     /* font-family: monospace; */
+    max-height: 125px;
+    overflow: hidden;
     white-space: pre-wrap;
     word-wrap: break-word;
     font-size: 12px;
@@ -206,7 +318,7 @@
     transition: 0.3s ease;
 }
 .content:hover {
-    opacity: 0.5;
+    color: hsl(0, 0%, 60%);
 }
 .bottom {
     /* position: absolute; */
