--- a/WebDev/blog-project/frontend/pages/Dashboard.module.css
+++ b/WebDev/blog-project/frontend/pages/Dashboard.module.css
@@ -44,3 +44,48 @@
     transition: 0.3s ease;
     z-index: 0;
 }
+.search-bar {
+    display:flex;
+    position: relative;
+    align-content: center;
+    width:100%;
+    /* border:1px solid red; */
+    margin-bottom: 3rem;
+    border-radius: 4px;
+    border:1px solid #cccccc;
+}
+.input {
+    font-size: 16px;
+    width:100%;
+    padding:8px;
+    padding-left: 2rem;
+    border-radius: 4px;
+    border:none;
+    outline:none;
+    /* border:1px solid blue; */
+}
+.search-bar i {
+    font-size: 16px;
+    position: absolute;
+    top:55%;
+    left:10px;
+    transform: translateY(-50%);
+    /* border:1px solid green; */
+}
+.clear-button  {
+    display:flex;
+    margin-right: 10px;
+    /* padding: 0; */
+    background-color: white;
+    outline: none;
+    border: none;
+    width: fit-content;
+    height: fit-content;
+    align-self: center;
+    cursor: pointer;
+    /* border:1px solid orange; */
+}
+.icon {
+    /* border:1px solid red; */
+    font-size: 16px;
+}
