--- a/WebDev/blog-project/frontend/pages/Dashboard.module.css
+++ b/WebDev/blog-project/frontend/pages/Dashboard.module.css
@@ -11,6 +11,9 @@
     margin-bottom: 1rem;
     font-weight: 500;
 }
+.tab-name {
+    margin-bottom: 1rem;
+}
 .nav-container {
     border-bottom: 1px solid hsl(0, 0%, 90%);
     margin-bottom: 3rem;
@@ -55,9 +58,9 @@
     border:1px solid #cccccc;
 }
 .input {
-    font-size: 16px;
+    font-size: 14px;
     width:100%;
-    padding:8px;
+    padding:10px;
     padding-left: 2rem;
     border-radius: 4px;
     border:none;
@@ -65,7 +68,7 @@
     /* border:1px solid blue; */
 }
 .search-bar i {
-    font-size: 16px;
+    font-size: 14px;
     position: absolute;
     top:55%;
     left:10px;
@@ -88,4 +91,46 @@
 .icon {
     /* border:1px solid red; */
     font-size: 16px;
+}
+.outer-grid {
+    /* border:1px solid red; */
+    display:grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding:14px;
+    position: relative;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+.tab-name {
+    /* border:1px solid blue; */
+    position: absolute;
+    top:50%;
+    transform: translateY(-50%);
+}
+.filter-container {
+    background-color: white;
+    width: fit-content;
+    height: fit-content;
+    position: absolute;
+    right:0;
+    transition: 0.3s ease;
+    z-index: 500;
+    /* border:1px solid #cccccc; */
+}
+.filter-button:hover {
+    border: 1px solid black;
+    background-color: hsl(0, 0%, 97%);
+}
+.dropdown-content {
+    background-color: white;
+    border:1px solid #cccccc;
+    border-radius: 10px;
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    width:fit-content;
+    position: absolute;
+    right:0;
+    top:200%;
+    z-index: 500;
 }
