--- a/WebDev/blog-project/frontend/src/Navbar.module.css
+++ b/WebDev/blog-project/frontend/src/Navbar.module.css
@@ -34,6 +34,7 @@
     color:black;
     font-size: 14px;
     padding:4px 2rem;
+    /* border:1px solid red; */
 }
 .list-items span {
     font-size: 16px;
@@ -51,7 +52,11 @@
 }
 
 .list-icons {
-    min-width: 25px !important;
+    display:flex;
+    /* justify-content: center; */
+    min-width: 16px !important;
+    /* border:1px solid red; */
+    margin-right: 0.5rem;
   }
   
 .list-icons svg {
